--- a/mvt_digiprint_gui/Views/UserControls/StepperView.xaml
+++ b/mvt_digiprint_gui/Views/UserControls/StepperView.xaml
@@ -25,6 +25,7 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
@@ -58,14 +59,15 @@
                 <CheckBox x:Name="Button_Cap"   Grid.Row="6" Content="Cap"   Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10,10,0,10" Click="CapCapping_clicked"     HorizontalAlignment="Left" Width="80"/>
                 <CheckBox x:Name="Button_Wash"  Grid.Row="7" Content="Wash"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10,10,0,10" Click="Wash_clicked"           HorizontalAlignment="Left" Width="80" Visibility="{Binding RobotUsed, Converter={StaticResource BoolToVisible_Converter}}"/>
                 <CheckBox x:Name="Button_Vacuum"  Grid.Row="8" Content="Vacuum"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10,10,0,10" Click="Vacuum_clicked"     HorizontalAlignment="Left" Width="80" Visibility="{Binding RobotUsed, Converter={StaticResource BoolToVisible_Converter}}"/>
-                <CheckBox x:Name="Button_RefRobot"   Grid.Row="9" Content="Ref Robot"   Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10,10,0,10" Click="CapRefRobot_clicked"     HorizontalAlignment="Left" Width="80" Visibility="{Binding RobotUsed, Converter={StaticResource BoolToVisible_Converter}}"/>
-                <CheckBox x:Name="Button_DripPans" Grid.Row="10" Content="DRIP PANS"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapDripPans_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
-                <CheckBox x:Name="Button_DripPansCAP" Grid.Row="10" Content="Carriage CAP"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapDripPansCAP_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
-                <CheckBox x:Name="Button_DripPansREF" Grid.Row="10" Grid.Column="1" Content="Carriage REF"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapDripPansREF_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
-                <CheckBox x:Name="Button_Fill" Grid.Row="11" Content="Fill 5sec"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapFill_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
-                <CheckBox x:Name="Button_Empty" Grid.Row="11" Grid.Column="1" Content="Empty 2min"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapEmpty_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
+                <CheckBox x:Name="Button_Wipe"   Grid.Row="9" Content="Wipe"   Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10,10,0,10" Click="Wipe_clicked"     HorizontalAlignment="Left" Width="80" Visibility="{Binding RobotUsed, Converter={StaticResource BoolToVisible_Converter}}"/>
+                <CheckBox x:Name="Button_RefRobot"   Grid.Row="10" Content="Ref Robot"   Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10,10,0,10" Click="CapRefRobot_clicked"     HorizontalAlignment="Left" Width="80" Visibility="{Binding RobotUsed, Converter={StaticResource BoolToVisible_Converter}}"/>
+                <CheckBox x:Name="Button_DripPans" Grid.Row="11" Content="DRIP PANS"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapDripPans_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
+                <CheckBox x:Name="Button_DripPansCAP" Grid.Row="11" Content="Carriage CAP"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapDripPansCAP_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
+                <CheckBox x:Name="Button_DripPansREF" Grid.Row="11" Grid.Column="1" Content="Carriage REF"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapDripPansREF_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
+                <CheckBox x:Name="Button_Fill" Grid.Row="12" Content="Fill 5sec"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapFill_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
+                <CheckBox x:Name="Button_Empty" Grid.Row="12" Grid.Column="1" Content="Empty 2min"  Style="{DynamicResource Mouvent.CommandChcekboxStyle}" Margin="10" Click="CapEmpty_clicked"        IsEnabled="{Binding capDP803_enabled}"/>
 
-                <Grid x:Name="Leds_DripPans" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="10">
+                <Grid x:Name="Leds_DripPans" Grid.Row="11" Grid.Column="1" Grid.ColumnSpan="10">
                     <StackPanel Orientation="Horizontal">
                         <Image  Source="../../Resources/Bitmaps/LED_GREEN.ico" Visibility="{Binding DripPans_InfeedDOWN,   Converter={StaticResource BoolToVisible_Converter}}" HorizontalAlignment="Left"/>
                         <Image  Source="../../Resources/Bitmaps/LED_GREY.ico"  Visibility="{Binding DripPans_InfeedDOWN,   Converter={StaticResource BoolToInVisible_Converter}}" HorizontalAlignment="Left"/>
