--- a/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
@@ -171,9 +171,10 @@
                     ImageBox="true"
                     >
                 </rx:RxComboBox>
-             <!--   <common:MvtNumBox  Margin="5, 0, 0, 5"  Grid.Row="4" Grid.Column="2" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Min="0"/> -->
+                <!-- test cutting image -->
+         <!--   <common:MvtNumBox  Margin="5, 0, 0, 5"  Grid.Row="4" Grid.Column="2" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Min="0"/> -->
                 <common:MvtNumBox  Margin="5, 0, 0, 5"  Grid.Row="4" Grid.Column="2" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right"/>
-                    <StackPanel  Grid.Row="4" Grid.Column="3" Orientation="Horizontal">
+                <StackPanel  Grid.Row="4" Grid.Column="3" Orientation="Horizontal">
                     <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
                     <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
                 </StackPanel>
