--- a/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
@@ -168,6 +168,7 @@
                             <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"   Content="Prg+Vac"  Margin="5"     Click="PurgeVacc_Clicked" Padding="10" x:Name="Button_PurgeVacc"/>
                             <Button  Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"                     Content="Prg+Wpe"  Margin="5"   Click="PurgeWipe_Clicked" Padding="10" x:Name="Button_PurgeWipe"/>
                             <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40" Content="Prg+Wash" Margin="5" Click="PurgeWash_Clicked" Padding="10" x:Name="Button_PurgeWash"/>
+                            <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40" Content="Prg4Ever" Margin="5" Click="Purge4Ever_Clicked" Padding="10" x:Name="Button_Purge4Ever"/>
                             <Button Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40" Content="Wipe" Margin="5" Click="Wipe_Clicked" Padding="10" x:Name="Button_Wipe"/>
                             <Rectangle Fill="{StaticResource Mouvent.MainColorBrush}" HorizontalAlignment="Stretch" Height="1" Margin="-16, 8"/>
                             <Button    Style="{StaticResource Mouvent.CmdButtonStyle}" Height="40"                   Content="Fill"    Margin="5"    Click="Fill_Clicked"      Padding="10" />
