Add possibility for Purge4Ever on individually Heads

--- a/mvt_digiprint_gui/Views/PrintSystemExtended/PrintHeadView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemExtended/PrintHeadView.xaml
@@ -197,6 +197,8 @@
                                 Click="Purge_Clicked"/>
                         <Button Style="{StaticResource Mouvent.CmdButtonStyle}"  Height="40" Content="Purge Hard"
                                 Click="PurgeHard_Clicked" x:Name="Button_PurgeHard"/>
+                        <Button Style="{StaticResource Mouvent.CmdButtonStyle}"  Height="40" Content="Purge4Ever"
+                                Click="Purge4Ever_Clicked" x:Name="Button_Purge4Ever"/>
                         <Rectangle Fill="{StaticResource Mouvent.MainColorBrush}" HorizontalAlignment="Stretch" Height="1" Margin="-16, 8"/>
                         <Button Style="{StaticResource Mouvent.CmdButtonStyle}"  Height="40" Content="Wipe" Click="Wipe_Clicked"
                                 x:Name="Button_Wipe"/>
