--- a/mvt_digiprint_gui/Views/AlignmentView/RobotHeadAdjustmentView.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/RobotHeadAdjustmentView.xaml
@@ -53,15 +53,15 @@
                     <TextBlock Grid.Row="0" Grid.Column="0" Margin="10">PrintbarNo</TextBlock>
                     <TextBlock Grid.Row="2" Grid.Column="0" Margin="10">HeadNo</TextBlock>
                     <TextBlock Grid.Row="4" Grid.Column="0" Margin="10">Axis</TextBlock>
-                    <TextBlock Grid.Row="6" Grid.Column="0" Margin="10">Steps</TextBlock>
+                    <TextBlock Grid.Row="6" Grid.Column="0" Margin="10">Turns</TextBlock>
                     <common:MvtNumBox Grid.Row="0" Grid.Column="1" Margin="5" Text="{Binding PrintbarNo}"></common:MvtNumBox>
                     <common:MvtNumBox  Grid.Row="2" Grid.Column="1" Margin="5" Text="{Binding HeadNo}"></common:MvtNumBox>
                     <common:MvtNumBox Grid.Row="4" Grid.Column="1" Margin="5" Text="{Binding Axis}"></common:MvtNumBox>
                     <common:MvtNumBox  Grid.Row="6" Grid.Column="1" Margin="5" Text="{Binding Steps}"></common:MvtNumBox>
-                    <TextBlock Grid.Row="0" Grid.Column="2" Margin="10"></TextBlock>
-                    <TextBlock Grid.Row="2" Grid.Column="2" Margin="10"></TextBlock>
-                    <TextBlock Grid.Row="4" Grid.Column="2" Margin="10"></TextBlock>
-                    <TextBlock Grid.Row="6" Grid.Column="2" Margin="10">1/6 Turn</TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="2" Margin="10">0 to 3</TextBlock>
+                    <TextBlock Grid.Row="2" Grid.Column="2" Margin="10">-1 to 7</TextBlock>
+                    <TextBlock Grid.Row="4" Grid.Column="2" Margin="10">0 = Angle, 1 = Stitch</TextBlock>
+                    <TextBlock Grid.Row="6" Grid.Column="2" Margin="10">In Turns</TextBlock>
                     <!--
                     <common:MvtButton Grid.Row="0" Grid.Column="3" Margin="5" Grid.RowSpan="2" VerticalAlignment="Top"
                           Click="AngleInfo_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeS}">
@@ -77,7 +77,6 @@
                                                 Kind="Help"></iconPacks:PackIconMaterial>
                     </common:MvtButton>
                     -->
-                    <ProgressBar Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="1" Margin="10" Height="20" HorizontalAlignment="Stretch" Value="{Binding Progress}"  />
 
                     <Grid Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" Margin="5" HorizontalAlignment="Center">
                         <Grid.ColumnDefinitions>
